# ai-experiments

./: README.md  requirements.txt
ext/jmagics/: README.md  pyproject.toml
ext/jmagics/jmagics/: __init__.py  duration.py  sysinfo.py
notebooks/semantic_search/: custom_numpy_profiling.ipynb  faiss_profiling.ipynb  profile_single.ipynb
